--- a/exercicios/steam/game1.html
+++ b/exercicios/steam/game1.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicial</title>
+    <title>ELDEN RING no Steam</title>
     <link rel="shortcut icon" href="imagens/steam.icon" type="image/x-icon">
     <link rel="stylesheet" href="mobile.css" media="screen">
+    <link rel="stylesheet" href="game1.css">
 </head>
 
 <body>
@@ -109,31 +110,45 @@
         </ul>
         <input type="search" name="namesearch" id="search" placeholder="Procurar">
     </section>
-    <video
-        src="https://shared.fastly.steamstatic.com/store_item_assets/steam/clusters/sale_autumn2024/36a01fe4331ab0ca600ff205/webm_page_bg_brazilian.webm?t=1732820066"
-        autoplay width="800px"></video>
 
+    <div id="img_elden">
 
-    <section id="game_loja">
+    </div>
+    <section id="infomacoes">
+        <h2 style="color: white; font-weight: 600; padding: 5px; font-size: 1.3em;">ELDEN RING</h2>
+        <p class="text1">Desenvolvedor <a href="#">FromSoftware, Inc.</a></p>
+        <p class="text1">Distribuidora <a href="#">FromSoftware, Inc. <a href="#">Bandai Namco Entertaiment</a></a></p>
+        <p class="text1">Lançado: <span style="color: rgb(192, 191, 191);">24/fev/2022</span></p>
 
-        <a href="#">
-            <section id="game1">
+        <p style="color: rgb(216, 216, 216); padding: 5px; font-size: 0.8em;">O NOVO RPG DE AÇÃO E FANTASIA. Levante-se,
+            Maculado, e seja guiado pela graça para portar o poder do Anel Prístino e se tornar um Lorde Prístino nas
+            Terras Intermédias.</p>
 
-                <p><span id="desconto">-20%</span><span id="preco">R$ 199,50</span> R$ 159,60</p>
-            </section>
-        </a>
+        <p class="marcadores">MARCADORES</p>
+        <ul id="tipos">
+            <li><a href="#">Soulslike</a>
+            <li><a href="#">Mundo Aberto</a>
+            <li><a href="#">Fantasia Sombria</a>
+            <li><a href="#">RPG</a>
+            <li><a href="#">+</a>
+        </ul>
 
-        <a href="game1.html">
-            <section id="game2">
-                <p><span id="desconto">-20%</span><span id="preco">R$ 299,90</span> R$ 229,60</p>
-            </section>
-        </a>
+        <p class="marcadores" style="padding-top: 5px 0px 3px 0px; "> ANÁLISES</p>
+         
+        <section id="avaliacao">
+            <p style="color: #5EB0E0; font-size: 0.8em; margin-bottom: 7px;"><a href="#">Muito Positivas</a> <span style="color: #818181;">(92% de 724,348) DESDE O INÍCIO</span></p>
+            <p style="color: #5EB0E0; font-size: 0.8em;"><a href="#">Extremamente Positivas </a><span style="color: #818181;">(96% de 10,879) RECENTES</span></p>
+        </section>
+         
+        <video src="https://video.cloudflare.steamstatic.com/store_trailers/256864892/movie480_vp9.webm?t=1645830851"  controls></video>
+        <p style="font-size: 0.7em; color: #9e9e9e; margin-bottom: 15px;" ><a href="#">Inicie a sessão</a> para adicionar este item à sua lista de desejos, segui-lo ou ignorá-lo</p>
 
+        <div id="report" style="  width: 15px; height: 15px; margin: auto; background-color: #233C4E; padding: 5px 5px 4px 5px; border-radius: 2px;" >
+            <img src="https://store.cloudflare.steamstatic.com/public/shared/images/icon_report.svg" alt="">
+        </div>
 
 
     </section>
-
-
 
 
 
